<package>
  <name>object_manipulation_msgs</name>
  <version>1.0.0</version>
  <description>Generic messages for pickup and place functionality. The messages
    contained here define a complete interface for pickup and place
    tasks. 

    Note that for some of the general services and actions defined
    here, robot-specific implementations might exist elsewhere and be
    used at run time.</description>
  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/object_manipulation_msgs</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Matei Ciocarlie</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>household_objects_database_msgs</build_depend>
  <build_depend>shape_msgs</build_depend>
  <build_depend>arm_navigation_msgs</build_depend>
  <build_depend>manipulation_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>household_objects_database_msgs</run_depend>
  <run_depend>shape_msgs</run_depend>
  <run_depend>arm_navigation_msgs</run_depend>
  <run_depend>manipulation_msgs</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>actionlib_msgs</test_depend> -->
  <!-- <test_depend>std_msgs</test_depend> -->
  <!-- <test_depend>geometry_msgs</test_depend> -->
  <!-- <test_depend>sensor_msgs</test_depend> -->
  <!-- <test_depend>trajectory_msgs</test_depend> -->
  <!-- <test_depend>sensor_msgs</test_depend> -->
  <!-- <test_depend>household_objects_database_msgs</test_depend> -->
  <!-- <test_depend>shape_msgs</test_depend> -->
  <!-- <test_depend>arm_navigation_msgs</test_depend> -->
  <!-- <test_depend>manipulation_msgs</test_depend> -->

<export>
    <cpp cflags="-I${prefix}/include"/>
</export>

</package>
