<package>
  <name>object_manipulator</name>
  <version>1.0.0</version>
  <description>Core functionality for pickup and place tasks. Services Pickup
     and Place action goals.</description>
  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/object_manipulator</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Matei Ciocarlie and Kaijen Hsiao</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>object_manipulation_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>kinematics_msgs</build_depend>
  <build_depend>pr2_controllers_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>arm_navigation_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>interpolated_ik_motion_planner</build_depend>
  <build_depend>pr2_mechanism_msgs</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>planning_environment</build_depend>
  <build_depend>arm_kinematics_constraint_aware</build_depend>
  <build_depend>common_rosdeps</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>object_manipulation_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>kinematics_msgs</run_depend>
  <run_depend>pr2_controllers_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>arm_navigation_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>interpolated_ik_motion_planner</run_depend>
  <run_depend>pr2_mechanism_msgs</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>planning_environment</run_depend>
  <run_depend>arm_kinematics_constraint_aware</run_depend>
  <run_depend>common_rosdeps</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>tf</test_depend> -->
  <!-- <test_depend>pluginlib</test_depend> -->
  <!-- <test_depend>std_srvs</test_depend> -->
  <!-- <test_depend>actionlib</test_depend> -->
  <!-- <test_depend>object_manipulation_msgs</test_depend> -->
  <!-- <test_depend>sensor_msgs</test_depend> -->
  <!-- <test_depend>kinematics_msgs</test_depend> -->
  <!-- <test_depend>pr2_controllers_msgs</test_depend> -->
  <!-- <test_depend>geometry_msgs</test_depend> -->
  <!-- <test_depend>arm_navigation_msgs</test_depend> -->
  <!-- <test_depend>visualization_msgs</test_depend> -->
  <!-- <test_depend>interpolated_ik_motion_planner</test_depend> -->
  <!-- <test_depend>pr2_mechanism_msgs</test_depend> -->
  <!-- <test_depend>eigen_conversions</test_depend> -->
  <!-- <test_depend>planning_environment</test_depend> -->
  <!-- <test_depend>arm_kinematics_constraint_aware</test_depend> -->
  <!-- <test_depend>common_rosdeps</test_depend> -->

<export>
    <cpp lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib -lobject_manipulator_tools -lobject_manipulator_grasp_execution -lobject_manipulator_place_execution" cflags="`pkg-config --cflags eigen3` -I${prefix}/include"/>
</export>

</package>
