<package>
  <name>rviz_interaction_tools</name>
  <version>1.0.0</version>
  <description>Various tools for realizing 3D user interfaces in rviz,
     e.g. for scene segmentation, object recognition or
     grasping.</description>
  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rviz_interaction_tools</url>
  <!-- <url type="bugtracker"></url> -->

  <author>David Gossow</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>rviz</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>stereo_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>shape_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>rviz</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>stereo_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>shape_msgs</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>rviz</test_depend> -->
  <!-- <test_depend>sensor_msgs</test_depend> -->
  <!-- <test_depend>stereo_msgs</test_depend> -->
  <!-- <test_depend>geometry_msgs</test_depend> -->
  <!-- <test_depend>shape_msgs</test_depend> -->

<export>
    <cpp lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib -lrviz_interaction_tools" cflags="-I${prefix}/include"/>
</export>

</package>
